--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/Alps-Engineering/Project-Atelier/issues"
   },
-  "homepage": "https://github.com/Alps-Engineering/Project-Atelier#readme"
+  "homepage": "https://github.com/Alps-Engineering/Project-Atelier#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.12.14"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "jest": "^27.0.4"
+  }
 }
