--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "postgres": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
