--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "mongoose": "^5.12.14",
+    "mysql": "^2.18.1",
+    "npm": "^7.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
