--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
     "path": "^0.12.7",
