--- a/ProductsAPI/MySQL/Dockerfile
+++ b/ProductsAPI/MySQL/Dockerfile
@@ -4,7 +4,7 @@ FROM node:latest
 WORKDIR /app
 
 # Install app dependencies
-COPY ../../package*.json ./
+COPY package*.json ./
 
 RUN npm install
 # If you are building your code for production
@@ -14,4 +14,6 @@ RUN npm install
 COPY . .
 EXPOSE 4000
 
-CMD ["npm","productsStart"]
+CMD ["npm","run","productsStart"]
+
+# Need to move this file to main directory before building!
