--- a/ProductsAPI/MySQL/artilleryTests/test.yaml
+++ b/ProductsAPI/MySQL/artilleryTests/test.yaml
@@ -12,10 +12,10 @@ config:
       arrivalRate: 50
       rampTo: 100
       name: Sustained load
-    - duration: 120
-      arrivalRate: 100
-      rampTo: 1000
-      name: Peak load
+    # - duration: 120
+    #   arrivalRate: 100
+    #   rampTo: 1000
+    #   name: Peak load
 scenarios:
   - flow:
       - loop:
